# grepri

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: grep.rs  io.rs  lib.rs  main.rs
src-tauri/src/grep/: grep_result.rs  grep_walker.rs  result_writer.rs
src-tauri/src/io/: folder.rs  folder_walker.rs
src/components/atoms/: index.ts
src/components/atoms/Button/: Button.tsx
src/components/atoms/CheckBox/: CheckBox.tsx
src/components/atoms/FormLabel/: FormLabel.tsx
src/components/atoms/TextField/: TextField.tsx
src/components/molecules/: index.ts
src/components/molecules/Box/: Box.tsx
src/components/molecules/List/: List.tsx  ListItem.tsx
src/components/organisms/: index.ts
src/components/organisms/FormActions/: FormActions.tsx
src/components/organisms/GrepConditions/: GrepConditions.tsx  index.ts
src/components/organisms/GrepOptions/: GrepOptions.tsx  index.ts
src/components/organisms/ResultAlert/: ResultAlert.tsx  index.ts
src/pages/: App.tsx
src/templates/: GrepForm.tsx
src/theme/: theme.ts
